banner alignment fix from f68ce332a596ed7d5d2a9cce7e933759e2d42a53

--- a/src/stylesheets/pageparts/_hero-banner.sass
+++ b/src/stylesheets/pageparts/_hero-banner.sass
@@ -16,6 +16,9 @@
       padding-bottom: 0
 
   &[data-slice-carouseldirection="Horizontal"]
+    @media (min-width: $smallDesktop)
+      padding-top: 8em
+      
     @media (min-width: $largeDesktop)
       height: 63.125em
 
